--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "contractor",
+  "name": "parasol-cli",
   "version": "1.0.0",
-  "description": "Simple Solidity Smart Contract Development Framework",
+  "description": "Powerful Smart Contract Development Environment",
   "main": "index.js",
   "bin": {
-    "contractor": "index.js"
+    "parasol": "index.js"
   },
   "preferGlobal": true,
   "scripts": {
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/nourharidy/contractor.git"
+    "url": "git+https://github.com/Lamarkaz/parasol.git"
   },
   "keywords": [
     "Solidity"
@@ -20,9 +20,9 @@
   "author": "Nour Haridy (nour@lamarkaz.com)",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/nourharidy/contractor/issues"
+    "url": "https://github.com/Lamarkaz/parasol/issues"
   },
-  "homepage": "https://github.com/nourharidy/contractor#readme",
+  "homepage": "https://github.com/Lamarkaz/parasol#readme",
   "dependencies": {
     "cli-spinner": "^0.2.8",
     "colors": "^1.3.2",
