--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/Lamarkaz/parasol#readme",
   "dependencies": {
+    "async-repl": "^0.4.0",
     "cli-spinner": "^0.2.8",
     "colors": "^1.3.2",
     "commander": "^2.17.1",
