--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/Lamarkaz/parasol#readme",
   "dependencies": {
+    "assign-deep": "^1.0.0",
     "async-repl": "^0.4.0",
     "cli-spinner": "^0.2.8",
     "colors": "^1.3.2",
@@ -32,6 +33,7 @@
     "fs-readdir-recursive": "^1.1.0",
     "ganache-cli": "^6.1.8",
     "handlebars": "^4.0.11",
+    "jsonfile": "^5.0.0",
     "mocha": "^5.2.0",
     "node-watch": "^0.5.8",
     "rimraf": "^2.6.2",
