--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "parasol-cli",
-  "version": "2.0.1",
+  "version": "2.0.2",
   "description": "Powerful Smart Contract Development Environment",
   "main": "index.js",
   "bin": {
@@ -26,7 +26,7 @@
   "dependencies": {
     "assign-deep": "^1.0.0",
     "async-repl": "^0.4.0",
-    "cli-spinner": "^0.2.8",
+    "cfonts": "^2.2.2",
     "colors": "^1.3.2",
     "commander": "^2.17.1",
     "fs-extra": "^7.0.0",
